fix(concepto): visibilidad restaurada, conflictos de animación resueltos

--- a/assets/css/components.css
+++ b/assets/css/components.css
@@ -42,7 +42,7 @@
 }
 
 .navbar__logo img {
-    height: 36px;
+    height: 75px;
     width: auto;
 }
 
